feat: add header style

--- a/index.html
+++ b/index.html
@@ -3,21 +3,37 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Your life is WebDev</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <h1>webdev</h1>
-                  <ul>
-                      <li> About </li>
-                      <li>Syllabus</li>
-                      <li>
-                          <img alt="WebDev">
-                       
+        <header class="header">
+            <h1 class="display_webdev">webdev</h1>
+            <div class="wrapper">
+              <div class="header_wrapper">
+                <div class="header_nav">
+                  <ul class="header_list">
+                      <li class="header_item about">
+                        <a href="#" class="header_link_about about">About</a>
                       </li>
-                      <li >Projects</li>
-                      <li >FAQ</li>
-                  </ul>  
-        </header>
+                      <li class="header_item syllabus">
+                        <a href="#" class="header_link syllabus">Syllabus</a>
+                      </li>
+                      <li class="header_item logo">
+                        <a href="#" class="header_link header_link_img">
+                          <img src="assets/img/logo.svg" alt="Your life is WebDev">
+                        </a>
+                      </li>
+                      <li class="header_item projects">
+                        <a href="#" class="header_link projects">Projects</a>
+                      </li>
+                      <li class="header_item faq">
+                        <a href="#" class="header_link faq">FAQ</a>
+                      </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </header>
         <main>
             <section>
                   <h1>your life is WebDev</h1>
