feat: add section 3 style

--- a/index.html
+++ b/index.html
@@ -83,15 +83,38 @@
                   </article>
                 </div>
               </section>
-              <section>
-                    <img alt="Our Community">
-                    <h2>our community</h2>
-                    <p>A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language.</p>
-                      <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+              <section class="our_community">
+                <div class="our_community_wrapper">
+                  <div class="our_community_item_text">
+                    <img class="our_community_img" src="assets/img/community_icon.svg" alt="Our Community">
+                    <h2 class="our_community_h2">our community</h2>
+                    <p class="our_community_p">A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language.</p>
+                  </div>
+                  <div class="our_community_nav_images">
+                    <div class="slider_nav">
+                      <a href="/" class="arr_left">&lt;</a> <span>1 / 5</span> <a href="/" class="arr_right">&gt;</a>
+                    </div>
+                    <div class="our_community_slider">
+                      <ul class="our_community_list">
+                        <li class="our_community_item">
+                          <div class="our_community_link our_community_1">
+                            <img src="assets/img/slider-item_1.svg" alt="1">
+                          </div>
+                        </li>
+                        <li class="our_community_item">
+                          <div class="our_community__link our_community_2">
+                            <img src="assets/img/slider-item-2.svg" alt="2">
+                          </div>
+                        </li>
+                        <li class="our_community_item">
+                          <div class="our_community__link our_community_3">
+                            <img src="assets/img/slider-item-3.svg" alt="3">
+                          </div>
+                        </li>
                       </ul>
+                    </div>
+                  </div>
+                </div>
               </section>
               <section>
                    <h2>Implement right Code</h2>
