feat: add section 4 style

--- a/index.html
+++ b/index.html
@@ -116,10 +116,19 @@
                   </div>
                 </div>
               </section>
-              <section>
-                   <h2>Implement right Code</h2>
-                    <p>These might be considered part of the <span>programming process</span>, but often the term software development is used for this larger process with the term programming, implementation.</p>
-                    <button >learn more</button>      
+              <<section class="implement">
+                <div class="implement_wrapper">
+                  <article class="imp_image">
+                      <img class="implement_img" src="assets/img/implement-image.svg" alt="Implement">
+                  </article>
+                  <article class="implement_item">
+                    <h2 class="implement_h2">Implement right Code</h2>
+                    <p class="implement_p">These might be considered part of the <span class="bold">programming process</span>, but often the term software development is used for this larger process with the term programming, implementation.</p>
+                    <div class="implement_button">
+                      <button class="implement_submit_button">learn more</button>
+                    </div>
+                </article>
+                </div>
               </section>
               <section>
                   <h2>sign up for our newsletter</h2>
