--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   </div>
                 </div>
               </section>
-              <<section class="implement">
+              <section class="implement">
                 <div class="implement_wrapper">
                   <article class="imp_image">
                       <img class="implement_img" src="assets/img/implement-image.svg" alt="Implement">
@@ -130,16 +130,26 @@
                 </article>
                 </div>
               </section>
-              <section>
-                  <h2>sign up for our newsletter</h2>
+              <section class="subscribe">
+                <div class="subscribe_wrapper">
+                  <h2 class="subscribe_title">sign up for our newsletter</h2>
+                  <article class="subscribe_email">
+                    <form class="email_form">
+                      <input type="email" placeholder="E-mail" class="email" id="email" pattern=".+@gmail.com" required title='Please provide e-mail in the format \"@gmail.com\"'><input type="submit" value="" class="button_send_email">
+                    </form>
+                </article>
+                </div>
             </section>
-            <section>
-                <h1>Download the App</h1>
-                <p>Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation.</p>
-                
-                   <a>pple store</a>
-                   <a>Play Market</a>
-            </section>
+            <section class="download">
+                <div class="download_wrapper">
+                  <h1 class="download_h1">Download the App</h1>
+                  <p class="download_p">Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation.</p>
+                  <article class="download_buttons">
+                     <a href="#" class="button_apple">Apple store</a>
+                     <a href="#" class="button_android">Play Market</a>
+                  </article>
+                </div>
+              </section>
         </main>
         <footer>
               <ul>
