feat: add footer style

--- a/index.html
+++ b/index.html
@@ -151,15 +151,37 @@
                 </div>
               </section>
         </main>
-        <footer>
-              <ul>
-                  <li>Credits</li>
-                  <li>Privacy</li>
-                  <li>Our teams</li>
-                  <li></li>
-                <li >by TonYem for RSS at 2020</li>
-              </ul>  
-        </footer>
+        <footer class="footer">
+            <div class="footer_wrapper">
+              <nav class="nav_footer">
+                <ul class="footer_list">
+                  <div class="footer_links">
+                    <li class="footer_item">
+                      <a href="#" class="footer_link_nav credits">Credits</a>
+                    </li>
+                    <li class="footer__item">
+                      <a href="#" class="footer_link_nav privacy">Privacy</a>
+                    </li>
+                    <li class="footer__item">
+                      <a href="#" class="footer_link_nav our_teams">Our teams</a>
+                    </li>
+                  </div>
+                  <div class="footer_logo">
+                    <li class="footer_item logo">
+                      <a href="#" class="footer_link footer_link_img">
+                        <img src="assets/img/logo.svg" alt="Your life is WebDev">
+                      </a>
+                    </li>
+                  </div>
+                  <div class="footer_rss">
+                    <li class="footer_item rss">
+                      <a href="#" class="footer_link_rss rss">by TonYem for RSS at 2020</a>
+                    </li>
+                  </div>
+                </ul>
+              </nav>
+           </div>
+          </footer>
     </body>
 </html>
 
